--- a/we-mail/src/components/SidebarOption.css
+++ b/we-mail/src/components/SidebarOption.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     height: 40px;
+    width: 10vw;
     padding: 0 10px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
