feat: UI optimised

--- a/we-mail/src/components/EmailList.css
+++ b/we-mail/src/components/EmailList.css
@@ -1,14 +1,7 @@
 .emailList {
     flex: 1;
-    margin: auto;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
-.emailList::-webkit-scrollbar{
-    display: none;
-}
 
-.emailList {
-    -ms-overflow-style: none;
-    scrollbar-width:none;
-}
+
