--- a/we-mail/src/components/EmailRow.css
+++ b/we-mail/src/components/EmailRow.css
@@ -14,9 +14,9 @@
     box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.24);
 }
 
-/* .emailRow__options {
+.emailRow__options {
     display: flex;
-} */
+}
 
 .emailRow__message {
     display: flex;
@@ -39,11 +39,11 @@
     flex: 0.3;
 } */
 
-/* .emailRow__time {
+.emailRow__time {
     padding-right: 15px;
     font-size: 12px;
     font-weight: bold;
-} */
+} 
 
 .emailRow__description {
     font-weight: 400;
