--- a/we-mail/src/components/Sidebar.css
+++ b/we-mail/src/components/Sidebar.css
@@ -4,9 +4,10 @@
     text-transform: capitalize !important;
     color: gray;
     padding: 15px !important;
-    border-radius: 30px !important;
+    border-radius: 10px !important;
     box-shadow: 0px 2px 5px -2px rgba(0,0,0,0.75);
 }
 .sidebar{
     margin: 0 10px 0 0;
+    margin-top: 50px;
 }
